[AMEND] resolved flash messages z-index issue

--- a/devhub/static/css/style.css
+++ b/devhub/static/css/style.css
@@ -82,6 +82,7 @@ h2, h3, h4, h5, h6 {
     position: fixed;
     bottom: 2.5rem;
     right: 2.5rem;
+    z-index: 10;
     background: var(--brand-colour);
     padding: 1.5rem 2rem;
     border-radius: 0.8rem;
